changed covering settings of vies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ add_executable(moga
         src/collections/views/submenu.cpp
         src/collections/views/labeled_view.cpp
         src/collections/views/repeater.cpp
+        src/collections/views/magnetic.cpp
         src/collections/views/utility_tab.cpp
         src/collections/views/window.cpp
 
