color picker updated

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,8 @@ add_executable(moga
         src/visual/color/smart_color.cpp
         src/visual/renderer/renderer.cpp
         src/visual/animation/animation.cpp
+
+        src/visual/renderer/appearence/texture.cpp
         src/visual/renderer/appearence/animation.cpp
 
         # physics
