--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,6 +135,7 @@ add_executable(moga
         src/redactor/canvas/canvas_history.cpp
 
         src/redactor/plugins/settings_window.cpp
+        src/redactor/plugins/plugin_manager.cpp
 
         src/redactor/layer/layer.cpp
 
