--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,8 +134,10 @@ add_executable(moga
         src/redactor/canvas/canvas.cpp
         src/redactor/canvas/canvas_history.cpp
 
+        src/redactor/plugins/plugin.cpp
         src/redactor/plugins/settings_window.cpp
         src/redactor/plugins/plugin_manager.cpp
+        src/redactor/plugins/app_plugin_interface.cpp
 
         src/redactor/layer/layer.cpp
 
