added shader plugin example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,9 +157,15 @@ target_link_libraries(moga ${OPENGL_LIBRARIES})
 # aux_source_directory(src/collection/plugins ERASER_SOURCES)
 add_library(sharpy SHARED src/collections/plugins/sharpy.cpp)
 set_target_properties(sharpy PROPERTIES PREFIX "" OUTPUT_NAME "resources/plugin/tool/kctf_sharpy")
+target_compile_options(sharpy PRIVATE "${WARNING_FLAGS} -fdeclspec")
 
 add_library(rainbow_stamp SHARED src/collections/plugins/rainbow_stamp.cpp)
 set_target_properties(rainbow_stamp PROPERTIES PREFIX "" OUTPUT_NAME "resources/plugin/tool/kctf_rainbow_stamp")
+target_compile_options(rainbow_stamp PRIVATE "${WARNING_FLAGS} -fdeclspec")
+
+add_library(shdr SHARED src/collections/plugins/shdr.cpp)
+set_target_properties(shdr PROPERTIES PREFIX "" OUTPUT_NAME "resources/plugin/tool/kctf_shdr")
+target_compile_options(shdr PRIVATE "${WARNING_FLAGS} -fdeclspec")
 
 # add_custom_target(rebuild_plugins
 #         COMMAND convert image.ppm image.png
