--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ include_directories(src
                     src/collections)
 
 set(CMAKE_EXE_LINKER_FLAGS "-pthread")
-set(CMAKE_CXX_FLAGS   "-O3 ${WARNING_FLAGS} -fdeclspec -march=native -fsanitize=undefined") #-fsanitize=address
+set(CMAKE_CXX_FLAGS   "-O3 ${WARNING_FLAGS} -fdeclspec") #-fsanitize=address
 
 find_package(SFML 2 COMPONENTS system window graphics network audio REQUIRED)
 find_package(OpenGL)
@@ -157,15 +157,12 @@ target_link_libraries(moga ${OPENGL_LIBRARIES})
 # aux_source_directory(src/collection/plugins ERASER_SOURCES)
 add_library(sharpy SHARED src/collections/plugins/sharpy.cpp)
 set_target_properties(sharpy PROPERTIES PREFIX "" OUTPUT_NAME "resources/plugin/tool/kctf_sharpy")
-target_compile_options(sharpy PRIVATE "${WARNING_FLAGS} -fdeclspec")
 
 add_library(rainbow_stamp SHARED src/collections/plugins/rainbow_stamp.cpp)
 set_target_properties(rainbow_stamp PROPERTIES PREFIX "" OUTPUT_NAME "resources/plugin/tool/kctf_rainbow_stamp")
-target_compile_options(rainbow_stamp PRIVATE "${WARNING_FLAGS} -fdeclspec")
 
 add_library(shdr SHARED src/collections/plugins/shdr.cpp)
 set_target_properties(shdr PROPERTIES PREFIX "" OUTPUT_NAME "resources/plugin/tool/kctf_shdr")
-target_compile_options(shdr PRIVATE "${WARNING_FLAGS} -fdeclspec")
 
 # add_custom_target(rebuild_plugins
 #         COMMAND convert image.ppm image.png
