restored shader-powered effects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -174,11 +174,11 @@ set_target_properties(sharpy PROPERTIES PREFIX "" OUTPUT_NAME "resources/plugin/
 add_library(negative SHARED src/collections/plugins/negative.cpp)
 set_target_properties(negative PROPERTIES PREFIX "" OUTPUT_NAME "resources/plugin/tool/kctf_negative")
 
-# add_library(bloor SHARED src/collections/plugins/bloor.cpp)
-# set_target_properties(bloor PROPERTIES PREFIX "" OUTPUT_NAME "resources/plugin/tool/kctf_bloor")
+add_library(bloor SHARED src/collections/plugins/bloor.cpp)
+set_target_properties(bloor PROPERTIES PREFIX "" OUTPUT_NAME "resources/plugin/tool/kctf_bloor")
 
-# add_library(sharp SHARED src/collections/plugins/sharp.cpp)
-# set_target_properties(sharp PROPERTIES PREFIX "" OUTPUT_NAME "resources/plugin/tool/kctf_sharp")
+add_library(sharp SHARED src/collections/plugins/sharp.cpp)
+set_target_properties(sharp PROPERTIES PREFIX "" OUTPUT_NAME "resources/plugin/tool/kctf_sharp")
 
 
 # add_custom_target(rebuild_plugins
