--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,6 +148,7 @@ add_executable(moga
         src/redactor/plugins/interface/shader_factory.cpp
 
         src/redactor/plugins/interface/widgets/pabstract.cpp
+        src/redactor/plugins/interface/widgets/pwindow.cpp
         src/redactor/plugins/interface/widgets/pbutton.cpp
 
         src/redactor/layer/layer.cpp
