--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -151,6 +151,7 @@ add_executable(moga
         src/redactor/plugins/interface/widgets/pwindow.cpp
         src/redactor/plugins/interface/widgets/pbutton.cpp
         src/redactor/plugins/interface/widgets/pslider.cpp
+        src/redactor/plugins/interface/widgets/plabel.cpp
 
         src/redactor/layer/layer.cpp
 
