--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ include_directories(src
                     src/collections)
 
 set(CMAKE_EXE_LINKER_FLAGS "-pthread")
-set(CMAKE_CXX_FLAGS   "-O3 ${WARNING_FLAGS} -fdeclspec -march=native -fsanitize=undefined") #-fsanitize=address
+set(CMAKE_CXX_FLAGS   "-O3 ${WARNING_FLAGS} -fdeclspec -march=native") #-fsanitize=address
 
 find_package(SFML 2 COMPONENTS system window graphics network audio REQUIRED)
 find_package(OpenGL)
@@ -173,7 +173,7 @@ add_executable(moga
         )
 
 target_link_libraries(moga sfml-graphics sfml-window sfml-system)
-target_link_libraries(moga ${OPENGL_LIBRARIES})
+target_link_libraries(moga ${OPENGL_LIBRARIES} ${CMAKE_DL_LIBS})
 
 aux_source_directory(src/collection/plugins ERASER_SOURCES)
 add_library(sharpy SHARED src/collections/plugins/sharpy.cpp)
